# requirements

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.rst  backports.txt  bindep.txt  blacklist.txt  cap.py  denylist.txt  detail.py  dev-requirements.txt  global-requirements.txt  lower-constraints-xfails.txt  lower-constraints.txt  mirror-requirements.txt  other-requirements.txt  pi4openstack.py  projects.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  update.py  upper-constraints-xfails.txt  upper-constraints.txt  versions_overlap_parent.py
.zuul.d/: cross-jobs.yaml  jobs.yaml  project-template.yaml  project.yaml
babel-test/: babel-input.py  expected-log-error.pot  expected.pot
cmds/: normalize
doc/: requirements.txt
doc/source/: conf.py  freeze.rst  index.rst
doc/source/contributor/: contributing.rst
openstack_requirements/: check.py  constraints.py  generate.py  project.py  project_config.py  requirement.py  update.py  utils.py
openstack_requirements/cmds/: build_lower_constraints.py  check_conflicts.py  check_exists.py  check_py2.py  edit_constraint.py  generate.py  normalize_requirements.py  update.py  validate.py  validate_projects.py
openstack_requirements/tests/: common.py  test_build_lower_constraints.py  test_check.py  test_check_conflicts.py  test_check_constraints.py  test_constraints.py  test_edit_constraint.py  test_generate.py  test_integration.py  test_project.py  test_requirement.py  test_update.py  test_update_pbr.py  test_update_suffix.py
openstack_requirements/tests/files/: denylist.txt  gr-base.txt  old-setup.py  pbr_setup.cfg  project-with-bad-requirement.txt  project.txt  pyproject.toml  setup.cfg  setup.py  test-project.txt  upper-constraints.txt
pip-freeze.d/: ceilometer-py27.txt  neutron-full.txt
playbooks/: build-kafka.yaml  drop-wheel-mirror.yaml  requirements-check.yaml  requirements-cross-test.yaml
playbooks/files/: project-requirements-change.py
playbooks/requirements-integration-dsvm/: run.yaml
playbooks/requirements-integration-dsvm-ubuntu-trusty/: run.yaml
roles/check-requirements/: README.rst
roles/check-requirements/defaults/: main.yaml
roles/check-requirements/tasks/: main.yaml
tests/: common.py  test_update.py  test_update_pbr.py  test_update_suffix.py  test_versions_overlap_parent.py
tests/files/: gr-base.txt  old-setup.py  project-with-bad-requirement.txt  setup.cfg  test-project.txt
tools/: README.txt  babel-test.sh  build_wheels.sh  cap.py  check-install.py  code-search.sh  cruft.sh  detail.py  fix-lower-constraints.py  functions  get-health-report.sh  grep-all.sh  integration.sh  lint.py  list-unused-packages.sh  noop-change.sh  pip-requires  pip.sh  publish_constraints.sh  test-requires  update.sh  what-broke.py
