[metadata]
name = openstack_requirements
summary = OpenStack python dependency management tools
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/requirements/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    openstack_requirements

[entry_points]
console_scripts =
    edit-constraints = openstack_requirements.cmds.edit_constraint:main
    generate-constraints = openstack_requirements.cmds.generate:main
    check-conflicts = openstack_requirements.cmds.check_conflicts:main
    validate-constraints = openstack_requirements.cmds.validate:main
    validate-projects = openstack_requirements.cmds.validate_projects:main
    normalize-requirements = openstack_requirements.cmds.normalize_requirements:main
    check-python2-support = openstack_requirements.cmds.check_py2:main
    check-constraints = openstack_requirements.cmds.check_exists:main
    build-lower-constraints = openstack_requirements.cmds.build_lower_constraints:main
